syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.idprovider";
option java_outer_classname = "IdProviderProto";
option objc_class_prefix = "TEMP";

package id_provider;

service IdProvider {
  // Authenticates a user and returns a session
  rpc Login (LoginRequest) returns (LoginReply) {}

  // Query session information
  rpc Session (SessionRequest) returns (SessionReply) {}
}

message LoginRequest {
  string user = 1;
  string password = 2;
}

message LoginReply {
  uint32 session = 1;
}

message SessionRequest {
  uint32 session = 1;
}

message SessionReply {
  string user = 1;
  repeated string roles = 2;
}